header and footer

--- a/app/components/header/_header.html
+++ b/app/components/header/_header.html
@@ -1,1 +1,18 @@
-<header class="header"></header>
+<header class="header">
+	<div class="container">
+		<nav class="nav grid">
+			<a href="#" class="nav__logo">
+				<svg class="nav__logo-icon">
+					<use xlink:href="images/sprite.svg#logo"></use>
+				</svg>
+			</a>
+			<ul class="nav__list">
+				<li class="nav__item"><a href="#" class="nav__link nav__link--active">Главная</a></li>
+				<li class="nav__item"><a href="#" class="nav__link">Мода</a></li>
+				<li class="nav__item"><a href="#" class="nav__link">Технология</a></li>
+				<li class="nav__item"><a href="#" class="nav__link">Музыка</a></li>
+				<li class="nav__item"><a href="#" class="nav__link">Фильмы</a></li>
+			</ul>
+		</nav>
+	</div>
+</header>
