--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,16 @@
 @import 'reset';
 @import 'global';
 
+/* components */
+@import '../components/header/header';
+@import '../components/footer/footer';
+
+/* bem-blocks */
+@import '../components/bem-blocks/copy/copy';
+
+
+/* sections */
+
 
 
 
