--- a/app/components/footer/_footer.html
+++ b/app/components/footer/_footer.html
@@ -1,1 +1,5 @@
-<footer class="footer"></footer>
+<footer class="footer">
+	<div class="container">
+		<!--=include ../bem-blocks/copy/_copy.html -->
+	</div>
+</footer>
