--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,14 +9,137 @@
 
 /* bem-blocks */
 @import '../components/bem-blocks/copy/copy';
+@import '../components/bem-blocks/main-article/main-article';
+@import '../components/bem-blocks/small-article/small-article';
 
 
 /* sections */
 
+.articles{
+	&__big-col{
+		grid-column: span 9;
+	}
+
+	&__small-col{
+		grid-column: 10/-1;
+	}
+}
+
+//.main-article{
+//	display: grid;
+//	grid-template-columns: repeat(9, 101px);
+//	gap: 20px;
+
+//	&__img{
+//		position: relative;
+
+//		grid-column: span 3;
+//		min-height: 185px;
+//		max-height: 345px;
+
+//		img{
+//			position: absolute;
+
+//			width: 100%;
+//			height: 100%;
+//			object-fit: cover;
+//		}
+//	}
+
+//	&__content{
+//		grid-column: 4/-1;
+//	}
+
+//	&__category{
+//		font-size: 14px;
+//		font-weight: 700;
+//		line-height: 24px;
+
+//		text-transform: uppercase;
+//		color: $accent;
+//	}
+
+//	&__title{
+//		font-family: secondary, sans-serif;
+//		font-size: 42px;
+//		line-height: 50px;
+//		font-weight: 700;
+
+//		text-transform: uppercase;
+//		color: $text-color;
+//	}
+
+//	&__text{
+//		margin-top: 35px;
+
+//		font-size: 22px;
+//		line-height: 26px;
+//		font-weight: 400;
+
+//		color: $text-color;
+//	}
+	
+//	&__src{
+//		margin-top: 35px;
+		
+//		font-size: 20px;
+//		line-height: 24px;
+//		font-weight: 500;
+		
+//		text-transform: uppercase;
+//		color: $grey;
+//	}
+//}
 
 
+//.small-article{
+//	grid-column: 10/-1;
+//	padding-left: 10px;
+//	border-left: 10px solid $text-color;
 
+//	&__title{
+//		font-family: secondary, sans-serif;
+//		font-size: 20px;
+//		line-height: 24px;
+//		font-weight: 700;
+//		color: $text-color;
+//	}
 
+//	&__caption{
+//		margin-top: 15px;
+//		display: flex;
+//		gap: 20px;
+//	}
+
+//	&__date{
+//		text-transform: uppercase;
+//		font-size: 20px;
+//		line-height: 24px;
+//		font-weight: 600;
+//		color: $accent;
+//	}
+
+//	&__src{
+//		position: relative;
+//		padding-left: 30px;
+//		font-size: 20px;
+//		line-height: 24px;
+//		font-weight: 600;
+//		text-transform: uppercase;
+//		color: $grey;
+
+//		&::before{
+//			position: absolute;
+//			content: '';
+//			width: 5px;
+//			height: 5px;
+//			border-radius: 50%;
+//			background-color: $grey;
+//			top: 10px;
+//			left: 5px;
+//		}
+//	}
+//}
 
 
 /* media requests */
