--- a/app/components/sections/articles__big-col/_articles__big-col.html
+++ b/app/components/sections/articles__big-col/_articles__big-col.html
@@ -1,5 +1,7 @@
 <section class="articles__big-col">
 	<!--=include ../../bem-blocks/main-article/_main-article.html -->
+	<!--=include ../../bem-blocks/main-article/_main-article.html -->
+	<!--=include ../../bem-blocks/main-article/_main-article.html -->
 </section>
 
 				
