--- a/app/components/sections/articles__small-col/_articles__small-col.html
+++ b/app/components/sections/articles__small-col/_articles__small-col.html
@@ -1,5 +1,13 @@
 <section class="articles__small-col">
 	<!--=include ../../bem-blocks/small-article/_small-article.html -->
+	<!--=include ../../bem-blocks/small-article/_small-article.html -->
+	<!--=include ../../bem-blocks/small-article/_small-article.html -->
+	<!--=include ../../bem-blocks/small-article/_small-article.html -->
+	<!--=include ../../bem-blocks/small-article/_small-article.html -->
+	<!--=include ../../bem-blocks/small-article/_small-article.html -->
+	<!--=include ../../bem-blocks/small-article/_small-article.html -->
+	<!--=include ../../bem-blocks/small-article/_small-article.html -->
+	<!--=include ../../bem-blocks/small-article/_small-article.html -->
 </section>
 
 
